@@ -104,3 +104,4 @@ v1.2
 - Implement DuckDuckGo app
 - Implement WeChat app
 - Cleanup and normalization of the language code
+- [PIG] Return a schema with ONLY the requested fields
